[package]
name = "yharnam"
version = "0.1.0"
authors = ["Gabriel Martinez <reitaka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
intl_pluralrules = "7"
log = "0.4"
prost = "0.7"
serde = { version = "1", features = ["derive"] }
unic-langid = "0.9"

[build-dependencies]
prost-build = "0.7"

[dev-dependencies]
pretty_env_logger = "0.4"
