[package]
name = "yharnam"
version = "0.0.1"
edition = "2018"
authors = ["Gabriel Martinez <gabe@gabem.me>"]
description = "An implementation of the Yarn Spinner runtime."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mystal/yharnam"

[dependencies]
csv = "1"
intl_pluralrules = "7"
log = "0.4"
prost = "0.7"
serde = { version = "1", features = ["derive"] }
unic-langid = "0.9"

[build-dependencies]
prost-build = "0.7"

[dev-dependencies]
pretty_env_logger = "0.4"
